# bazel_avr_toolchain

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  blink.cpp  delay.cpp  delay.h
bazel/rules/cc/: cc_firmware.bzl
bazel/toolchain/: toolchain.bzl
bazel/toolchain/avr/: BUILD  cc_toolchain_config.bzl
bazel/toolchain/avr/wrappers/: wrapper
example/: BUILD
