module(
    name = "toolchain_avr",
    version = "0.1",
    compatibility_level = 0,
)

bazel_dep(name = "platforms", version = "0.0.10")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "avr",
    build_file = "//third_party/toolchains:avr.BUILD",
    sha256 = "04023fb121f94f858dc664d8fa46ddcb605acbb7e6d1b0f41123a7c94994580a",
    url = "https://github.com/ltekieli/devboards-toolchains/releases/download/v2023.04.01/avr.tar.gz",
)

register_toolchains(
    "//bazel/toolchain/avr:avr_none_toolchain",
    dev_dependency = True,
)
