module(
    name = "toolchain_avr",
    version = "0.1",
    compatibility_level = 0,
)

bazel_dep(name = "platforms", version = "0.0.10")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "avr",
    build_file = "//third_party/toolchains:avr.BUILD",
    sha256 = "07eecfaaec0037c82cd7f5265022e3afca7ba3934aba9531b621e561894e5aa8",
    url = "https://github.com/ltekieli/devboards-toolchains/releases/download/v2024.11.01/avr.tar.gz",
)

register_toolchains(
    "//bazel/toolchain/avr:avr_none_toolchain",
    dev_dependency = True,
)
